# overture-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt  run.py  start.sh
.claude-plugin/: plugin.json
skills/overture-maps/: SKILL.md
src/overture_mcp/: __init__.py  nominatim.py  overture.py  server.py
