[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overture-mcp"
version = "1.0.0"
description = "Overture Maps building footprint MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "duckdb>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "starlette>=0.46.0",
]

[project.scripts]
overture-mcp = "overture_mcp.server:app"

[tool.hatch.build.targets.wheel]
packages = ["src/overture_mcp"]
